 
 ** slicesample        (patch #10019)
 
 ** wblplot            (patch #8579)

 Improvements:
 =============

 ** boxplot: better Matlab compatibility; several Matlab-compatible
    plot options added (OutlierTags, Sample_IDs, BoxWidth, Widths,
    BoxStyle, Positions, Labels, Colors) and an Octave-specific one
    (CapWidhts); demos added; texinfo improved (patch #9930)

 ** crosstab.m: make n-dimensional (patch #10014))

 ** dendrogram.m: many improvements (patch #10036)

 ** fitgmdist.m: fix typo in ComponentProportion (bug #59386)

 ** anovan.m: use double instead of toascii (bug #60514)
 
 ** tricdf, triinv: fixes (bug #60113)
 

Summary of important user-visible changes for statistics 1.4.2:
-------------------------------------------------------------------

 ** canoncorr: allow more variables than observations

 ** fitgmdist: return fitgmdist parameters (Bug #57917)

 ** gamfit: invert parameter per docs (Bug #57849)

 ** geoXXX: update docs 'number of failures (X-1)' => 'number of failures (X)' (Bug #57606)

 ** kolmogorov_smirnov_test.m: update function handle usage from octave6+ (Bug #57351)

 ** linkage.m: fix octave6+ parse error (Bug #57348)

 ** unifrnd: changed unifrnd(a,a) to return a 0 rather than NaN (Bug #56342)

 ** updates for usage of depreciated octave functions

Summary of important user-visible changes for statistics 1.4.1:
-------------------------------------------------------------------
 ** update install scripts for octave 5.0 depreciated functions

 ** bug fixes to the following functions:
      pdist2.m: use max in distEucSq (Bug #50377)
      normpdf: use eps tolerance in tests (Bug #51963)
      fitgmdist: fix an output bug in fitgmdist
      t_test: Set tolerance on t_test BISTS (Bug #54557)
      gpXXXXX: change order of inputs to match matlab (Bug #54009)
      bartlett_test: df = k-1 (Bug #45894)
      gppdf: apply scale factor (Bug #54009)
      gmdistribution: updates for bug #54278, ##54279
      wishrnd: Bug #55860
