@@ -1,5 +1,6 @@
-## Copyright (C) 2013-2014 Nir Krakauer <nkrakauer@ccny.cuny.edu>
-##
+## Copyright (C) 2013-2021 Nir Krakauer <nkrakauer@ccny.cuny.edu>
+## Copyright (C) 2014 by Mikael Kurula <mkurula@abo.fi>
+
 ## This program is free software; you can redistribute it and/or modify it under
 ## the terms of the GNU General Public License as published by the Free Software
 ## Foundation; either version 3 of the License, or (at your option) any later
@@ -14,7 +15,7 @@
 ## this program; if not, see <http://www.gnu.org/licenses/>.
 
 ## -*- texinfo -*-
-## @deftypefn {Function File} {@var{X_use}, @var{b}, @var{bint}, @var{r}, @var{rint}, @var{stats} =} stepwisefit (@var{y}, @var{X}, @var{penter} = 0.05, @var{premove} = 0.1)
+## @deftypefn {Function File} {@var{X_use}, @var{b}, @var{bint}, @var{r}, @var{rint}, @var{stats} =} stepwisefit (@var{y}, @var{X}, @var{penter} = 0.05, @var{premove} = 0.1, @var{method} = "corr")
 ## Linear regression with stepwise variable selection.
 ##
 ## @subheading Arguments
@@ -28,6 +29,9 @@
 ## @var{penter} is the maximum p-value to enter a new variable into the regression (default: 0.05).
 ## @item
 ## @var{premove} is the minimum p-value to remove a variable from the regression (default: 0.1).
+## @item
+## @var{method} sets how predictors are selected at each step, either based on their correlation with the residuals ("corr", default)
+##   or on the p values of their regression coefficients when they are successively added ("p").
 ## @end itemize
 ##
 ## @subheading Return values
@@ -51,7 +55,16 @@
 ## Author: Nir Krakauer <nkrakauer@ccny.cuny.edu>
 ## Description: Linear regression with stepwise variable selection
 
-function [X_use, b, bint, r, rint, stats] = stepwisefit(y, X, penter = 0.05, premove = 0.1)
+function [X_use, b, bint, r, rint, stats] = stepwisefit(y, X, penter = 0.05, premove = 0.1, method = "corr")
+
+if nargin >= 3 && isempty(penter)
+  penter = 0.05;
+endif
+
+if nargin >= 4 && isempty(premove)
+  premove = 0.1;
+endif
+
 
 #remove any rows with missing entries
 notnans = !any (isnan ([y X]) , 2);
@@ -75,13 +88,30 @@ while 1
   added = false;
   if numel(X_use) < k
     X_inds = zeros(k, 1, "logical"); X_inds(X_use) = 1;
-    [~, i_max_corr] = max(abs(corr(X(:, ~X_inds), r))); #try adding the variable with the highest correlation to the residual from current regression
-    i_max_corr = (1:k)(~X_inds)(i_max_corr); #index within the original predictor set
-    [b_new, bint_new, r_new, rint_new, stats_new] = regress(y, [ones(n, 1) X(:, [X_use i_max_corr])], penter);
+    
+    switch lower (method)
+      case {"corr"}
+        [~, i_to_add] = max(abs(corr(X(:, ~X_inds), r))); #try adding the variable with the highest correlation to the residual from current regression
+        i_to_add = (1:k)(~X_inds)(i_to_add); #index within the original predictor set
+        [b_new, bint_new, r_new, rint_new, stats_new] = regress(y, [ones(n, 1) X(:, [X_use i_to_add])], penter);      
+      case {"p"}
+        z_vals=zeros(k,1);
+        for j=1:k
+          if ~X_inds(j)
+            [b_j, bint_j, ~,~ ,~] = regress(y, [ones(n, 1) X(:, [X_use j])], penter);
+            z_vals(j) = abs(b_j(end)) / (bint_j(end, 2) - b_j(end));
+          endif
+        endfor
+        [~, i_to_add] = max(z_vals); #try adding the variable with the largest z-value (smallest partial p-value)
+        [b_new, bint_new, r_new, rint_new, stats_new] = regress(y, [ones(n, 1) X(:, [X_use i_to_add])], penter);
+      otherwise
+        error("stepwisefit: invalid value for method")
+    endswitch
+    
     z_new = abs(b_new(end)) / (bint_new(end, 2) - b_new(end));
     if z_new > 1 #accept new variable
       added = true;
-      X_use = [X_use i_max_corr];
+      X_use = [X_use i_to_add];
       b = b_new;
       bint = bint_new;
       r = r_new;
@@ -128,3 +158,11 @@ endfunction
 %! [X_use, b, bint, r, rint, stats] = stepwisefit(y, X);
 %! assert(X_use, [4 1])
 %! assert(b, regress(y, [ones(size(y)) X(:, X_use)], 0.05))
+%! [X_use, b, bint, r, rint, stats] = stepwisefit(y, X, 0.05, 0.1, "corr");
+%! assert(X_use, [4 1])
+%! assert(b, regress(y, [ones(size(y)) X(:, X_use)], 0.05))
+%! [X_use, b, bint, r, rint, stats] = stepwisefit(y, X, [], [], "p");
+%! assert(X_use, [4 1])
+%! assert(b, regress(y, [ones(size(y)) X(:, X_use)], 0.05))
+
+
